[gd_scene load_steps=43 format=3 uid="uid://ctxnlmnyr30mm"]

[ext_resource type="Script" path="res://Scripts/player_1.gd" id="1_8jlmc"]
[ext_resource type="Texture2D" uid="uid://lp8dg4vhphcr" path="res://Sprites/DinoSprites - vita.png" id="1_yguhk"]
[ext_resource type="Texture2D" uid="uid://dqtveq4llwknv" path="res://Sprites/0x72_DungeonTilesetII_v1.4.png" id="3_mi1fe"]
[ext_resource type="Script" path="res://Scripts/Life.gd" id="4_fs4sy"]
[ext_resource type="Texture2D" uid="uid://g0l75fq6raog" path="res://Sprites/HatsTest.png" id="5_2irjk"]
[ext_resource type="Texture2D" uid="uid://bjeghg8gb06c0" path="res://Sprites/Light.png" id="5_k6vjt"]
[ext_resource type="Material" uid="uid://vwprmsgn4vg8" path="res://ExcludeCanvas.tres" id="7_n3ubw"]
[ext_resource type="AudioStream" uid="uid://3p268x4r2ccc" path="res://Audio/Sounds/step.wav" id="7_w1xtl"]
[ext_resource type="FontFile" uid="uid://d2naa1ovvhg1t" path="res://monogram.ttf" id="8_0pqoi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cgv08"]
radius = 4.12311

[sub_resource type="Animation" id="Animation_yayo7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hat:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-10.0]
}

[sub_resource type="Animation" id="Animation_okcum"]
resource_name = "damage"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [14, 15, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hat:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-10.0]
}

[sub_resource type="Animation" id="Animation_qahhw"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hat:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [-10.0, -9.0, -10.0]
}

[sub_resource type="Animation" id="Animation_dwk6y"]
resource_name = "stop_walk"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hat:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-9.5, -10.5]
}

[sub_resource type="Animation" id="Animation_1i4kc"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hat:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [-10.0, -9.0, -10.0, -9.0, -10.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bcxmp"]
_data = {
"RESET": SubResource("Animation_yayo7"),
"damage": SubResource("Animation_okcum"),
"idle": SubResource("Animation_qahhw"),
"stop_walk": SubResource("Animation_dwk6y"),
"walk": SubResource("Animation_1i4kc")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_eiefo"]
animation = &"damage"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tru25"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vjdbv"]
animation = &"stop_walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uyc2s"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_62mjw"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ost8b"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jxvyt"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ydnyv"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5034i"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_iccub"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_awqk7"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8x348"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lymt2"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_m6o6v"]
states/Start/position = Vector2(80, 88)
states/damage/node = SubResource("AnimationNodeAnimation_eiefo")
states/damage/position = Vector2(330, 38)
states/idle/node = SubResource("AnimationNodeAnimation_tru25")
states/idle/position = Vector2(184, 88)
states/stop_walk/node = SubResource("AnimationNodeAnimation_vjdbv")
states/stop_walk/position = Vector2(330, 186)
states/walk/node = SubResource("AnimationNodeAnimation_uyc2s")
states/walk/position = Vector2(478, 88)
transitions = ["walk", "stop_walk", SubResource("AnimationNodeStateMachineTransition_62mjw"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_ost8b"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_jxvyt"), "idle", "damage", SubResource("AnimationNodeStateMachineTransition_ydnyv"), "stop_walk", "idle", SubResource("AnimationNodeStateMachineTransition_5034i"), "stop_walk", "damage", SubResource("AnimationNodeStateMachineTransition_iccub"), "damage", "walk", SubResource("AnimationNodeStateMachineTransition_awqk7"), "walk", "damage", SubResource("AnimationNodeStateMachineTransition_8x348"), "damage", "idle", SubResource("AnimationNodeStateMachineTransition_lymt2")]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_7d8r5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t7uql"]
size = Vector2(15.0065, 14.8717)

[sub_resource type="Animation" id="Animation_4ieih"]
resource_name = "Idle"
length = 0.64
loop_mode = 2
step = 0.63
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2212, 2215, 2214]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.63),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_kif41"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yougx"]
_data = {
"Idle": SubResource("Animation_4ieih"),
"RESET": SubResource("Animation_kif41")
}

[sub_resource type="Theme" id="Theme_xpvpg"]
default_font = ExtResource("8_0pqoi")

[sub_resource type="Theme" id="Theme_ge8rk"]
default_font = ExtResource("8_0pqoi")

[sub_resource type="Animation" id="Animation_k67k3"]
resource_name = "Fade_In"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_yytmo"]
resource_name = "Fade_out"
length = 0.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_x7idb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D/CanvasLayer2/Victory:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera2D/CanvasLayer2/Victory:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera2D/CanvasLayer2/Victory/Text:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ep4jm"]
resource_name = "Win"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D/CanvasLayer2/Victory:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/CanvasLayer2/Victory:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D/CanvasLayer2/Victory/Text:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2d5r0"]
_data = {
"Fade_In": SubResource("Animation_k67k3"),
"Fade_out": SubResource("Animation_yytmo"),
"RESET": SubResource("Animation_x7idb"),
"Win": SubResource("Animation_ep4jm")
}

[node name="Player1" type="CharacterBody2D"]
position = Vector2(-24, 0)
collision_mask = 146
script = ExtResource("1_8jlmc")

[node name="Wand" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Wand"]
position = Vector2(27, -1.06581e-14)
rotation = 1.5708
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_mi1fe")
hframes = 32
vframes = 32
frame = 309

[node name="Marker2D" type="Marker2D" parent="Wand/Sprite2D"]

[node name="Sprite2D2" type="Sprite2D" parent="Wand"]
position = Vector2(16, 0)
rotation = 1.5708
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_mi1fe")
hframes = 32
vframes = 32
frame = 341

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(0, 8)
scale = Vector2(0.0214, 0.0088)
texture = ExtResource("5_k6vjt")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_yguhk")
hframes = 24
frame = 4

[node name="Hat" type="Sprite2D" parent="."]
position = Vector2(-5, -10)
rotation = -0.20944
scale = Vector2(1.014, 1.014)
texture = ExtResource("5_2irjk")
hframes = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
rotation = 1.5708
shape = SubResource("CircleShape2D_cgv08")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bcxmp")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_m6o6v")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_7d8r5")

[node name="Life" type="Container" parent="."]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_fs4sy")

[node name="Heart1" type="Sprite2D" parent="Life"]
position = Vector2(-7, -16)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_mi1fe")
hframes = 32
vframes = 32
frame = 530

[node name="Heart2" type="Sprite2D" parent="Life"]
position = Vector2(0, -16)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_mi1fe")
hframes = 32
vframes = 32
frame = 530

[node name="Heart3" type="Sprite2D" parent="Life"]
position = Vector2(7, -16)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_mi1fe")
hframes = 32
vframes = 32
frame = 530

[node name="Hurt" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Speed" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="Shoot Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Shoot Timer 2" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 124

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1.19209e-07, 3)
scale = Vector2(0.799653, -0.672417)
shape = SubResource("RectangleShape2D_t7uql")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.75, 0.75)
process_callback = 0
position_smoothing_enabled = true

[node name="PointLight2D" type="PointLight2D" parent="Camera2D"]
position = Vector2(-2, 0)
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_k6vjt")

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]
scale = Vector2(0.5, 0.5)
transform = Transform2D(0.5, 0, 0, 0.5, 0, 0)

[node name="Sprite2D2" type="Sprite2D" parent="Camera2D/CanvasLayer"]
process_mode = 3
position = Vector2(580, 341)
scale = Vector2(2, 2)
texture = ExtResource("3_mi1fe")
flip_h = true
hframes = 64
vframes = 64
frame = 2215

[node name="AnimationTree2" type="AnimationPlayer" parent="Camera2D/CanvasLayer"]
process_mode = 3
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_yougx")
}

[node name="CoinAmount" type="Label" parent="Camera2D/CanvasLayer"]
process_mode = 3
material = ExtResource("7_n3ubw")
offset_left = 591.0
offset_top = 332.0
offset_right = 627.0
offset_bottom = 348.0
scale = Vector2(1.65754, 1.51575)
theme = SubResource("Theme_xpvpg")
theme_override_colors/font_color = Color(0.627451, 0.627451, 0.627451, 1)
uppercase = true

[node name="WaveCounter" type="Label" parent="Camera2D/CanvasLayer"]
process_mode = 3
visible = false
material = ExtResource("7_n3ubw")
offset_left = 10.0
offset_top = 304.0
offset_right = 180.0
offset_bottom = 379.0
scale = Vector2(2.51399, 2.1855)
theme = SubResource("Theme_xpvpg")
theme_override_colors/font_color = Color(0.627451, 0.627451, 0.627451, 1)
text = "Wave:"
uppercase = true

[node name="EnemyCounter" type="Label" parent="Camera2D/CanvasLayer"]
process_mode = 3
visible = false
material = ExtResource("7_n3ubw")
offset_left = 10.0
offset_top = 334.0
offset_right = 180.0
offset_bottom = 409.0
scale = Vector2(1.75956, 1.61425)
theme = SubResource("Theme_xpvpg")
theme_override_colors/font_color = Color(0.627451, 0.627451, 0.627451, 1)
text = "Remaining: "
uppercase = true

[node name="CanvasLayer2" type="CanvasLayer" parent="Camera2D"]
visible = false

[node name="Victory" type="ColorRect" parent="Camera2D/CanvasLayer2"]
modulate = Color(1, 1, 1, 0)
light_mask = 0
z_index = 609
offset_left = -68.0
offset_top = -32.0
offset_right = 1082.0
offset_bottom = 606.0
scale = Vector2(0.400847, 0.401265)
color = Color(0, 0, 0, 1)

[node name="Text" type="Label" parent="Camera2D/CanvasLayer2/Victory"]
process_mode = 3
material = ExtResource("7_n3ubw")
layout_mode = 0
offset_left = 389.176
offset_top = 239.244
offset_right = 461.176
offset_bottom = 271.244
scale = Vector2(3.29431, 2.91804)
theme = SubResource("Theme_xpvpg")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "You Won
Total Time: "
horizontal_alignment = 1
uppercase = true

[node name="Exit" type="Button" parent="Camera2D/CanvasLayer2/Victory"]
process_mode = 3
material = ExtResource("7_n3ubw")
layout_mode = 0
offset_left = 478.986
offset_top = 353.881
offset_right = 540.986
offset_bottom = 374.881
scale = Vector2(2.73933, 2.7084)
theme = SubResource("Theme_ge8rk")
theme_override_colors/font_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
disabled = true
action_mode = 0
text = "Main Menu"

[node name="Fade" type="ColorRect" parent="."]
offset_left = -892.0
offset_top = -508.0
offset_right = 912.0
offset_bottom = 551.0
color = Color(0, 0, 0, 1)

[node name="TransitionPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2d5r0")
}

[node name="Regain" type="CPUParticles2D" parent="."]
position = Vector2(0, 14)
emitting = false
amount = 20
one_shot = true
explosiveness = 0.44
emission_shape = 3
emission_rect_extents = Vector2(20, 1)
gravity = Vector2(0, -980)
linear_accel_min = 28.28
linear_accel_max = 28.28
angle_min = 203.6
angle_max = 203.6
scale_amount_min = 2.0
scale_amount_max = 3.0
color = Color(0, 0.611765, 0, 0.466667)
anim_speed_min = 6.46
anim_speed_max = 7.76

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Timer"]
stream = ExtResource("7_w1xtl")
volume_db = 7.496
bus = &"Sound"

[node name="Freeze" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[connection signal="timeout" from="Hurt" to="." method="_on_hurt_timeout"]
[connection signal="timeout" from="Speed" to="." method="_on_speed_timeout"]
[connection signal="timeout" from="Shoot Timer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="Shoot Timer 2" to="." method="_on_shoot_timer_2_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="pressed" from="Camera2D/CanvasLayer2/Victory/Exit" to="." method="_on_exit_pressed"]
[connection signal="timeout" from="Freeze" to="." method="_on_freeze_timeout"]
